--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,7 +120,7 @@ jobs:
           rm targets.tar
 
       - name: Import signing key
-        if: env.PGP_SECRET == '' && env.PGP_PASSPHRASE == ''
+        if: env.PGP_SECRET != '' && env.PGP_PASSPHRASE == ''
         env:
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
